GitOps/analytics-service/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: analytics-service
  labels:
    name: analytics-service
