GitOps/analytics-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service-deployment
  namespace: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: 246325869534.dkr.ecr.us-east-1.amazonaws.com/analytics-service:sha-fb8f5b84b06c
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "35m"
          ports:
            - containerPort: 8005
          startupProbe:
            httpGet: { path: /health, port: 8005 }
            periodSeconds: 5
            failureThreshold: 6
